--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ github_username:  thekingofcool
 repository: thekingofcool/thekingofcool.github.io
 # Build settings
 markdown: kramdown
-remote_theme: pages-themes/hacker@v0.2.0
+theme: jekyll-theme-hacker
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
