--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,16 @@ github_username:  thekingofcool
 repository: thekingofcool/thekingofcool.github.io
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-hacker
+remote_theme: riggraz/no-style-please
+
+theme_config:
+  appearance: "auto" # can be "light", "dark" or "auto"
+  back_home_text: ".." # customize text for homepage link in post layout
+  date_format: "%Y-%m-%d" # customize how date is formatted
+  show_description: false # show blog description in home page
+
 plugins:
-- jekyll-feed
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
