update website title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: thekingofcool's qqzone
+title: thekingofcool's website
 favicon: /assets/favicon.ico
 email: offweiboforawhile@proton.me
 twitter_username: offXforawhile
